# PointCloudRegistration

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
dataset/: CMakeLists.txt  DatasetGlobal.h  ReadPlyData.cpp  ReadPlyData.h  readPlyData.cpp  readPlyData.h
src/OptimizationAlgorithms/: Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  Constants.hpp  OptimizationAlgorithmsGlobal.h  Population.cpp  Population.hpp  PopulationMatrixType.cpp  PopulationMatrixType.hpp  Problems.cpp  Problems.hpp  Types.h
src/OptimizationAlgorithms/algorithm/: AlgorithmObject.cpp  AlgorithmObject.h  ArtificialBeeColony.cpp  ArtificialBeeColony.h  CMakeLists.txt  CuckooSearch.cpp  CuckooSearch.h  MultipleClassTeachingLearningBasedOptimization.cpp  MultipleClassTeachingLearningBasedOptimization.h  MultipleWhaleGroupsTeachingLearningBasedWhaleOptimiziotn.cpp  MultipleWhaleGroupsTeachingLearningBasedWhaleOptimiziotn.h  SingerInitMCTLBO.cpp  SingerInitMCTLBO.h  SmallGroupTeachingLearningBasedOptimization.cpp  SmallGroupTeachingLearningBasedOptimization.h  TeachingLearningBasedOptimization.cpp  TeachingLearningBasedOptimization.h  TeachingLearningBasedOptimizationMatrixType.cpp  TeachingLearningBasedOptimizationMatrixType.h  TeachingLearningBasedWhaleOptimiziotn.cpp  TeachingLearningBasedWhaleOptimiziotn.h  WhaleOptimization.cpp  WhaleOptimization.h
src/OptimizationAlgorithms/benchmark/: CMakeLists.txt
src/OptimizationAlgorithms/problems/: CMakeLists.txt  NullProblem.cpp  NullProblem.h  problems.h  test1Problem.cpp  test1Problem.h  test2Problem.cpp  test2Problem.h
src/OptimizationAlgorithms/tests/: CMakeLists.txt  MCTLBO.cpp  MCTLBOTest.cpp  MWGTLBWOTest.cpp  OABenchmark.cpp  OATest.cpp  TLBOMatrixTest.cpp  TLBOTest.cpp  TLBWOATest.cpp  WOATest.cpp
src/registration/: CMakeLists.txt  L2_SimpleProblem.cpp  L2_SimpleProblem.h  WOARegsitrationTest.cpp  dist.h  registraion_visualization.cpp  registraion_visualization.h  registrationObject.cpp  registrationObject.h  registration_benchmark.cpp  registration_global.h  registration_test.cpp  registration_visualization.cpp  registration_visualization.h  tlboRegistraion.cpp  tlboRegistraion.h
src/registration/benchmark/: BM_IA_FPCS.h  BM_IA_KFPCS.h  BM_IA_RANSAC.h  BM_ICP_P2N.h  BM_ICP_P2P.h  BM_MCTLBO.h  CMakeLists.txt  registration_benchmark.cpp
src/registration/filter/: CMakeLists.txt  FusionEKF.cpp  FusionEKF.h  PointCloudKF.cpp  PointCloudKF.h  kalman_filter.cpp  kalman_filter.h  measurement_package.h  tools.h
src/registration/problems/: CMakeLists.txt  L2_PE_Problem.cpp  L2_PE_Problem.h  L2_PE_gpu.cu  L2_PE_gpu.cuh  L2_SimpleProblem.cpp  L2_SimpleProblem.h
src/registration/tests/: CMakeLists.txt  WOARegsitrationTest.cpp  registration_cpd_test.cpp  registration_ia_fpcs_test.cpp  registration_ia_kfpcs_test.cpp  registration_ia_ransac_test.cpp  registration_icp_p2n_test.cpp  (+6 more)
(+73 files in other folders)
